--- a/Assignment1/yummy/index.html
+++ b/Assignment1/yummy/index.html
@@ -18,39 +18,39 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand" href="#">Yummy</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="collapse navbar-collapse justify-content-end"
-          id="navbarNav"
-        >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">HOME</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">CART</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">PROFILE</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">LOGIN</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
     <section class="hero-section">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container">
+          <a class="navbar-brand" href="#">Yummy</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">HOME</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">CART</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">PROFILE</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">LOGIN</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
       <div class="hero-overlay"></div>
       <div class="container hero-content">
         <div class="row">
@@ -62,6 +62,89 @@
               The best delicious food that meet your needs, order now
             </p>
             <button class="order-btn text-white">Order Now →</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="menu text-center">
+      <div class="container-fluid">
+        <h2 class="display-4 fw-bold mb-4">Order Food</h2>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="card" style="width: 18rem">
+                <img src="images/masala-dosa.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Masala Dosa</h5>
+                  <p class="card-text">some txt</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card " style="width: 18rem">
+                <img src="images/noodles-manchurian.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Noodles & Manchurian</h5>
+                  <p class="card-text">some txt</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 18rem">
+                <img src="images/nachos.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Nachos</h5>
+                  <p class="card-text">some txt</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 18rem">
+                <img src="images/samosa.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Samosa</h5>
+                  <p class="card-text">some txt</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="card" style="width: 18rem">
+                <img src="images/burger-fries.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Burger & Fries</h5>
+                  <p class="card-text">some txt</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 18rem">
+                <img src="images/cheese-toast.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Garlic cheese toast</h5>
+                  <p class="card-text">some txt</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 18rem">
+                <img src="images/noodles.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Hakka Noodle</h5>
+                  <p class="card-text">some txt</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 18rem">
+                <img src="images/pasta.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Pasta</h5>
+                  <p class="card-text">some txt</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
