added css to cards

--- a/Assignment1/yummy/index.html
+++ b/Assignment1/yummy/index.html
@@ -72,76 +72,245 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <div class="card" style="width: 18rem">
-                <img src="images/masala-dosa.png" class="card-img-top" alt="..." />
+              <div class="card">
+                <img
+                  src="images/masala-dosa.png"
+                  class="card-img-top"
+                  alt="..."
+                />
                 <div class="card-body">
-                  <h5 class="card-title">Masala Dosa</h5>
-                  <p class="card-text">some txt</p>
+                  <div class="row">
+                    <div class="col-8">
+                      <h5 class="card-title">Masala Dosa</h5>
+                    </div>
+                    <div class="col-4 item-price">&#8377;700</div>
+                  </div>
+                  <div class="row">
+
+                    <p class="card-text">
+                      llorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Duis viverra justo quis purus interdum porttitor.
+                    </p>
+                  </div>
+                  <div class="row">
+                    <div class="col ">
+                      <p class="rating">★(4.5)</p>
+                    </div>
+                    <div class="col">
+                      <button class="order-btn-item text-white">Add to cart</button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="card " style="width: 18rem">
-                <img src="images/noodles-manchurian.png" class="card-img-top" alt="..." />
+              <div class="card">
+                <img src="images/noodles.png" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <h5 class="card-title">Noodles & Manchurian</h5>
-                  <p class="card-text">some txt</p>
+                  <div class="row">
+                    <div class="col-8">
+                      <h5 class="card-title">Hakka Noodles</h5>
+                    </div>
+                    <div class="col-4 item-price">&#8377;250</div>
+                  </div>
+                  <div class="row">
+
+                    <p class="card-text">
+                      llorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Duis viverra justo quis purus interdum porttitor.
+                    </p>
+                  </div>
+                  <div class="row">
+                    <div class="col ">
+                      <p class="rating">★(4.5)</p>
+                    </div>
+                    <div class="col">
+                      <button class="order-btn-item text-white">Add to cart</button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="card" style="width: 18rem">
+              <div class="card">
                 <img src="images/nachos.png" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <h5 class="card-title">Nachos</h5>
-                  <p class="card-text">some txt</p>
+                  <div class="row">
+                    <div class="col-8">
+                      <h5 class="card-title">Nachos</h5>
+                    </div>
+                    <div class="col-4 item-price">&#8377;200</div>
+                  </div>
+                  <div class="row">
+
+                    <p class="card-text">
+                      llorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Duis viverra justo quis purus interdum porttitor.
+                    </p>
+                  </div>
+                  <div class="row">
+                    <div class="col ">
+                      <p class="rating">★(4.5)</p>
+                    </div>
+                    <div class="col">
+                      <button class="order-btn-item text-white">Add to cart</button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="card" style="width: 18rem">
+              <div class="card">
                 <img src="images/samosa.png" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <h5 class="card-title">Samosa</h5>
-                  <p class="card-text">some txt</p>
+                  <div class="row">
+                    <div class="col-8">
+                      <h5 class="card-title">Samosa</h5>
+                    </div>
+                    <div class="col-4 item-price">&#8377;50</div>
+                  </div>
+                  <div class="row">
+
+                    <p class="card-text">
+                      llorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Duis viverra justo quis purus interdum porttitor.
+                    </p>
+                  </div>
+                  <div class="row">
+                    <div class="col ">
+                      <p class="rating">★(4.5)</p>
+                    </div>
+                    <div class="col">
+                      <button class="order-btn-item text-white">Add to cart</button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <div class="card" style="width: 18rem">
-                <img src="images/burger-fries.png" class="card-img-top" alt="..." />
+              <div class="card">
+                <img
+                  src="images/burger-fries.png"
+                  class="card-img-top"
+                  alt="..."
+                />
                 <div class="card-body">
-                  <h5 class="card-title">Burger & Fries</h5>
-                  <p class="card-text">some txt</p>
+                  <div class="row">
+                    <div class="col-8">
+                      <h5 class="card-title">Burger with fries</h5>
+                    </div>
+                    <div class="col-4 item-price">&#8377;400</div>
+                  </div>
+                  <div class="row">
+
+                    <p class="card-text">
+                      llorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Duis viverra justo quis purus interdum porttitor.
+                    </p>
+                  </div>
+                  <div class="row">
+                    <div class="col ">
+                      <p class="rating">★(4.5)</p>
+                    </div>
+                    <div class="col">
+                      <button class="order-btn-item text-white">Add to cart</button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="card" style="width: 18rem">
-                <img src="images/cheese-toast.png" class="card-img-top" alt="..." />
+              <div class="card">
+                <img
+                  src="images/cheese-toast.png"
+                  class="card-img-top"
+                  alt="..."
+                />
                 <div class="card-body">
-                  <h5 class="card-title">Garlic cheese toast</h5>
-                  <p class="card-text">some txt</p>
+                  <div class="row">
+                    <div class="col-8">
+                      <h5 class="card-title">Garlic Cheese Toast</h5>
+                    </div>
+                    <div class="col-4 item-price">&#8377;150</div>
+                  </div>
+                  <div class="row">
+
+                    <p class="card-text">
+                      llorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Duis viverra justo quis purus interdum porttitor.
+                    </p>
+                  </div>
+                  <div class="row">
+                    <div class="col ">
+                      <p class="rating">★(4.5)</p>
+                    </div>
+                    <div class="col">
+                      <button class="order-btn-item text-white">Add to cart</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+            <div class="col">
+              <div class="card">
+                <img
+                  src="images/noodles-manchurian.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-8">
+                      <h5 class="card-title">Noodles & Manchurian</h5>
+                    </div>
+                    <div class="col-4 item-price">&#8377;400</div>
+                  </div>
+                  <div class="row">
+
+                    <p class="card-text">
+                      llorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Duis viverra justo quis purus interdum porttitor.
+                    </p>
+                  </div>
+                  <div class="row">
+                    <div class="col ">
+                      <p class="rating">★(4.5)</p>
+                    </div>
+                    <div class="col">
+                      <button class="order-btn-item text-white">Add to cart</button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="card" style="width: 18rem">
-                <img src="images/noodles.png" class="card-img-top" alt="..." />
-                <div class="card-body">
-                  <h5 class="card-title">Hakka Noodle</h5>
-                  <p class="card-text">some txt</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card" style="width: 18rem">
+              <div class="card">
                 <img src="images/pasta.png" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <h5 class="card-title">Pasta</h5>
-                  <p class="card-text">some txt</p>
+                  <div class="row">
+                    <div class="col-8">
+                      <h5 class="card-title">White Sauce Penne Pasta</h5>
+                    </div>
+                    <div class="col-4 item-price">&#8377;300</div>
+                  </div>
+                  <div class="row">
+
+                    <p class="card-text">
+                      llorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Duis viverra justo quis purus interdum porttitor.
+                    </p>
+                  </div>
+                  <div class="row">
+                    <div class="col ">
+                      <p class="rating">★(4.5)</p>
+                    </div>
+                    <div class="col">
+                      <button class="order-btn-item text-white">Add to cart</button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
