added login and registration page

--- a/Assignment1/yummy/index.html
+++ b/Assignment1/yummy/index.html
@@ -45,7 +45,7 @@
                 <a class="nav-link" href="#">PROFILE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">LOGIN</a>
+                <a class="nav-link" href="login.html">LOGIN</a>
               </li>
             </ul>
           </div>
@@ -72,7 +72,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <div class="card">
+              <div class="card item-card">
                 <img
                   src="images/masala-dosa.png"
                   class="card-img-top"
@@ -104,7 +104,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="card">
+              <div class="card item-card">
                 <img src="images/noodles.png" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <div class="row">
@@ -132,7 +132,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="card">
+              <div class="card item-card">
                 <img src="images/nachos.png" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <div class="row">
@@ -160,7 +160,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="card">
+              <div class="card item-card">
                 <img src="images/samosa.png" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <div class="row">
@@ -190,7 +190,7 @@
           </div>
           <div class="row">
             <div class="col">
-              <div class="card">
+              <div class="card item-card">
                 <img
                   src="images/burger-fries.png"
                   class="card-img-top"
@@ -222,7 +222,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="card">
+              <div class="card item-card">
                 <img
                   src="images/cheese-toast.png"
                   class="card-img-top"
@@ -255,7 +255,7 @@
             </div>
             
             <div class="col">
-              <div class="card">
+              <div class="card item-card">
                 <img
                   src="images/noodles-manchurian.png"
                   class="card-img-top"
@@ -287,7 +287,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="card">
+              <div class="card item-card">
                 <img src="images/pasta.png" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <div class="row">
@@ -318,5 +318,9 @@
         </div>
       </div>
     </section>
+
+    <div class="footer d-block text-center mx-2 mb-4">
+      <p class="align-middle">Made By Mohit Maraftia</p>
+    </div>
   </body>
 </html>
