self align footer and changed background color for cards

--- a/Assignment1/yummy/index.html
+++ b/Assignment1/yummy/index.html
@@ -320,7 +320,7 @@
     </section>
 
     <div class="footer d-block text-center mx-2 mb-4">
-      <p class="align-middle">Made By Mohit Maraftia</p>
+      <p>Made By Mohit Maraftia</p>
     </div>
   </body>
 </html>
