deploy login and register

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   class="card-img-top img-top"
                   alt="masala-dosa"
                 />
-                <div class="card-body">
+                <div class="card-body card-body-home">
                   <div class="row">
                     <div class="col-8">
                       <h5 class="card-title">Masala Dosa</h5>
@@ -106,7 +106,7 @@
             <div class="col">
               <div class="card item-card">
                 <img src="./Assignment1/yummy/images/noodles.png" class="card-img-top img-top" alt="ramen" />
-                <div class="card-body">
+                <div class="card-body card-body-home">
                   <div class="row">
                     <div class="col-8">
                       <h5 class="card-title">Veg Ramen</h5>
@@ -134,7 +134,7 @@
             <div class="col">
               <div class="card item-card">
                 <img src="./Assignment1/yummy/images/nachos.png" class="card-img-top img-top" alt="nachos" />
-                <div class="card-body">
+                <div class="card-body card-body-home">
                   <div class="row">
                     <div class="col-8">
                       <h5 class="card-title">Nachos</h5>
@@ -162,7 +162,7 @@
             <div class="col">
               <div class="card item-card">
                 <img src="./Assignment1/yummy/images/samosa.png" class="card-img-top img-top" alt="samosa" />
-                <div class="card-body">
+                <div class="card-body card-body-home">
                   <div class="row">
                     <div class="col-8">
                       <h5 class="card-title">Samosa</h5>
@@ -196,7 +196,7 @@
                   class="card-img-top img-btm"
                   alt="burger-fries"
                 />
-                <div class="card-body">
+                <div class="card-body card-body-home">
                   <div class="row">
                     <div class="col-8">
                       <h5 class="card-title">Burger with fries</h5>
@@ -228,7 +228,7 @@
                   class="card-img-top img-btm"
                   alt="cheese toast"
                 />
-                <div class="card-body">
+                <div class="card-body card-body-home">
                   <div class="row">
                     <div class="col-8">
                       <h5 class="card-title">Garlic Cheese Toast</h5>
@@ -261,7 +261,7 @@
                   class="card-img-top img-btm"
                   alt="noodles-manchurian"
                 />
-                <div class="card-body">
+                <div class="card-body card-body-home">
                   <div class="row">
                     <div class="col-8">
                       <h5 class="card-title">Noodles & Manchurian</h5>
@@ -289,7 +289,7 @@
             <div class="col">
               <div class="card item-card">
                 <img src="./Assignment1/yummy/images/pasta.png"  class="card-img-top img-btm" alt="Spaghetti" />
-                <div class="card-body">
+                <div class="card-body card-body-home">
                   <div class="row">
                     <div class="col-8">
                       <h5 class="card-title">Red Sauce Spaghetti Pasta</h5>
