deploy login and registration

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
             <p class="lead mb-4">
               The best delicious food that meet your needs, order now
             </p>
-            <button class="order-btn text-white">Order Now →</button>
+            <a href="#menu"><button class="order-btn text-white">Order Now →</button></a>
           </div>
         </div>
       </div>
     </section>
-    <section class="menu text-center">
+    <section class="menu text-center" id="menu">
       <div class="container-fluid">
         <h2 class="display-4 fw-bold mb-4">Order Food</h2>
         <div class="container">
@@ -297,7 +297,6 @@
                     <div class="col-4 item-price">&#8377;300</div>
                   </div>
                   <div class="row">
-
                     <p class="card-text">
                       llorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Duis viverra justo quis purus interdum porttitor.
