--- a/Assignment1/yummy/login.html
+++ b/Assignment1/yummy/login.html
@@ -22,7 +22,7 @@
     <section class="hero-section">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="/">Yummy</a>
+          <a class="navbar-brand" href="../../index.html">Yummy</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -37,7 +37,7 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/">HOME</a>
+                <a class="nav-link" href="../../index.html">HOME</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">CART</a>
